--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,15 @@
 [package]
 name = "playfair-rs"
 version = "0.1.0"
+description = "Playfair cipher implemented in Rust"
+authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+homepage = "https://github.com/orhun/playfair-rs"
+repository = "https://github.com/orhun/playfair-rs"
+keywords = ["playfair", "cipher"]
+categories = ["cryptography"]
+include = ["src/**/*", "Cargo.toml", "LICENSE-*", "README.md", "CHANGELOG.md"]
 edition = "2021"
 
 [dependencies]
